<resources>
    <string name="app_name">Number Converter</string>

    <string name="number">Перевести число</string>
    <string name="number_hint">78</string>

    <string name="initial_base_prefix">из</string>
    <string name="initial_base_postfix">-ной</string>
    <string name="initial_base_hint">10</string>

    <string name="final_base_prefix">в</string>
    <string name="final_base_postfix">-ную</string>
    <string name="final_base_hint">2</string>

    <string name="convert">Перевести</string>
</resources>