<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    android:paddingVertical="40dp"
    android:paddingHorizontal="20dp">

    <TextView
        android:id="@+id/tv_number"
        style="@style/tv_text"
        android:layout_centerHorizontal="true"
        android:text="@string/number" />

    <EditText
        android:id="@+id/et_number"
        style="@style/et"
        android:layout_width="match_parent"
        android:layout_below="@+id/tv_number"
        android:layout_marginTop="10dp"
        android:hint="@string/number_hint"
        android:inputType="textCapCharacters"
        android:maxLength="30" />

    <TextView
        android:id="@+id/tv_number_error"
        style="@style/tv_error"
        android:layout_below="@id/et_number"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/ll_bases_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_number_error"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_initial_base_container"
            style="@style/ll_base_container">

            <LinearLayout
                android:id="@+id/ll_initial_base"
                style="@style/ll_base">

                <TextView
                    android:id="@+id/tv_initial_base_prefix"
                    style="@style/tv_text"
                    android:text="@string/initial_base_prefix" />

                <EditText
                    android:id="@+id/et_initial_base"
                    style="@style/et"
                    android:layout_width="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:hint="@string/initial_base_hint"
                    android:inputType="number"
                    android:maxLength="2" />

                <TextView
                    android:id="@+id/tv_initial_base_postfix"
                    style="@style/tv_text"
                    android:text="@string/initial_base_postfix" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_initial_base_error"
                style="@style/tv_error" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_final_base_container"
            style="@style/ll_base_container"
            android:layout_marginStart="10dp">

            <LinearLayout
                android:id="@+id/ll_final_base"
                style="@style/ll_base">

                <TextView
                    android:id="@+id/tv_final_base_prefix"
                    style="@style/tv_text"
                    android:text="@string/final_base_prefix" />

                <EditText
                    android:id="@+id/et_final_base"
                    style="@style/et"
                    android:layout_width="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:hint="@string/final_base_hint"
                    android:inputType="number"
                    android:maxLength="2" />

                <TextView
                    android:id="@+id/tv_final_base_postfix"
                    style="@style/tv_text"
                    android:text="@string/final_base_postfix" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_final_base_error"
                style="@style/tv_error" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_convert"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/ll_bases_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/ubuntu"
        android:onClick="onConvertButtonClicked"
        android:paddingHorizontal="20dp"
        android:text="@string/convert"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_copy"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/ll_bases_container"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/copy"
        android:onClick="onCopyButtonClicked" />

    <TextView
        android:id="@+id/tv_result"
        style="@style/tv_text"
        android:layout_below="@id/btn_convert"
        android:layout_marginTop="10dp" />

</RelativeLayout>